--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@article{ref,
+author = {RefNeeded},
+journal = {none},
+pages = {1},
+title = {reference is needed},
+year = {0}
+}
+
 @article{darwin1909origin,
 author = {Darwin, Charles},
 journal = {PF Collier and Son},
@@ -3335,7 +3343,7 @@ volume = {173},
 year = {2015}
 }
 
-@article{Yang2011a,
+@article{Yang2011part,
 abstract = {We estimate and partition genetic variation for height, body mass index (BMI), von Willebrand factor and QT interval (QTi) using 586,898 SNPs genotyped on 11,586 unrelated individuals. We estimate that ∼45{\%}, ∼17{\%}, ∼25{\%} and ∼21{\%} of the variance in height, BMI, von Willebrand factor and QTi, respectively, can be explained by all autosomal SNPs and a further ∼0.5-1{\%} can be explained by X chromosome SNPs. We show that the variance explained by each chromosome is proportional to its length, and that SNPs in or near genes explain more variation than SNPs between genes. We propose a new approach to estimate variation due to cryptic relatedness and population stratification. Our results provide further evidence that a substantial proportion of heritability is captured by common SNPs, that height, BMI and QTi are highly polygenic traits, and that the additive variation explained by a part of the genome is approximately proportional to the total length of DNA contained within genes therein.},
 author = {Yang, Jian and Manolio, Teri A and Pasquale, Louis R and Boerwinkle, Eric and Caporaso, Neil and Cunningham, Julie M and de Andrade, Mariza and Feenstra, Bjarke and Feingold, Eleanor and Hayes, M Geoffrey and Hill, William G and Landi, Maria Teresa and Alonso, Alvaro and Lettre, Guillaume and Lin, Peng and Ling, Hua and Lowe, William and Mathias, Rasika A and Melbye, Mads and Pugh, Elizabeth and Cornelis, Marilyn C and Weir, Bruce S and Goddard, Michael E and Visscher, Peter M},
 doi = {10.1038/ng.823},
@@ -3464,4 +3472,143 @@ title = {{Principal components analysis corrects for stratification in genome-wi
 url = {http://www.ncbi.nlm.nih.gov/pubmed/16862161 http://www.nature.com/doifinder/10.1038/ng1847},
 volume = {38},
 year = {2006}
+}
+
+@article{Alexander2009,
+author = {Alexander, David H and Novembre, John},
+doi = {10.1101/gr.094052.109.vidual},
+file = {:home/murraycadzow/Dropbox/Papers/Genome Res.-2009-Alexander-1655-64.pdf:pdf},
+isbn = {1549-5469 (Electronic)$\backslash$r1088-9051 (Linking)},
+issn = {10889051},
+pages = {1655--1664},
+pmid = {19648217},
+title = {{Fast Model-Based Estimation of Ancestry in Unrelated Individuals}},
+year = {2009}
+}
+
+@article{Wallace1977a,
+abstract = {The American Rheumatism Association sub-committe on classification criteria for gout analyzed data from more than 700 patients with gout, pseudogout, rheumatoid arthritis, or septic arthritis. Criteria for classifying a patient as having gout were a) the presence of characteristic urate crystals in the joint fluid, and/or b) a topus proved to contain urate crystals by chemical or polarized light microscopic means, and/or c) the presence of six of the twelve clinical, laboratory, and X-ray phenomena listed in Table 5.},
+annote = {From Duplicate 1 (Preliminary criteria for the classification of the acute arthritis of primary gout. - Wallace, Stanley L.; Robinson, Harry; Masi, Alfonse T.; Decker, John L.; Mccarty, Daniel J.; Y{\"{u}}, T'sai-fan F)
+
+From Duplicate 1 ( 
+
+Preliminary criteria for the classification of the acute arthritis of primary gout
+
+- Wallace, Stanley L.; Robinson, Harry; Masi, Alfonse T.; Decker, John L.; Mccarty, Daniel J.; Y{\"{u}}, T'sai-fan )
+
+},
+author = {Wallace, Stanley L. and Robinson, Harry and Masi, Alfonse T. and Decker, John L. and Mccarty, Daniel J. and Y{\"{u}}, T'sai-fan F},
+doi = {10.1002/art.1780200320},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wallace et al. - 1977 - Preliminary criteria for the classification of the acute arthritis of primary gout.pdf:pdf},
+issn = {0004-3591},
+journal = {Arthritis and rheumatism},
+keywords = {Acute Disease,Arthritis,Arthritis: diagnosis,Chondrocalcinosis,Chondrocalcinosis: diagnosis,Diagnosis,Differential,Female,Gout,Gout: classification,Gout: diagnosis,Humans,Male,Rheumatoid,Rheumatoid: diagnosis,Suppuration,Synovial Fluid,Synovial Fluid: analysis,Uric Acid,Uric Acid: analysis},
+mendeley-groups = {PPARGC1Apaper},
+month = {apr},
+number = {3},
+pages = {895--900},
+pmid = {856219},
+title = {{Preliminary criteria for the classification of the acute arthritis of primary gout.}},
+url = {http://doi.wiley.com/10.1002/art.1780200320 http://www.ncbi.nlm.nih.gov/pubmed/856219},
+volume = {20},
+year = {1977}
+}
+
+@article{Hudjashov2018,
+abstract = {The debate concerning the origin of the Polynesian speaking peoples has been recently reinvigorated by genetic evidence for secondary migrations to western Polynesia from the New Guinea region during the 2nd millennium BP. Using genome-wide autosomal data from the Leeward Society Islands, the ancient cultural hub of eastern Polynesia, we find that the inhabitants' genomes also demonstrate evidence of this episode of admixture, dating to 1,700–1,200 BP. This supports a late settlement chronology for eastern Polynesia, commencing {\~{}}1,000 BP, after the internal differentiation of Polynesian society. More than 70{\%} of the autosomal ancestry of Leeward Society Islanders derives from Island Southeast Asia with the lowland populations of the Philippines as the single largest potential source. These long-distance migrants into Polynesia experienced additional admixture with northern Melanesians prior to the secondary migrations of the 2nd millennium BP. Moreover, the genetic diversity of mtDNA and Y chromosome lineages in the Leeward Society Islands is consistent with linguistic evidence for settlement of eastern Polynesia proceeding from the central northern Polynesian outliers in the Solomon Islands. These results stress the complex demographic history of the Leeward Society Islands and challenge phylogenetic models of cultural evolution predicated on eastern Polynesia being settled from Samoa. The cultural and linguistic unity of the islands and atolls of the central Pacific was first documented in detail by Johann Reinhold Forster, a naturalist on James Cook's second voyage of discovery to the Pacific (1772–1775). He suggested that the similarity of the languages spoken there, now known as Polynesian, reflected a compara-tively shallow time-depth since their dispersal 1},
+author = {Hudjashov, Georgi and Endicott, Phillip and Post, Helen and Nagle, Nano and Ho, Simon Y W and Lawson, Daniel J and Reidla, Maere and Karmin, Monika and Rootsi, Siiri and Metspalu, Ene and Saag, Lauri and Villems, Richard and Cox, Murray P and Mitchell, R John and Garcia-Bertrand, Ralph L and Metspalu, Mait and Herrera, Rene J},
+doi = {10.1038/s41598-018-20026-8},
+file = {:home/murraycadzow/Dropbox/Papers/s41598-018-20026-8.pdf:pdf},
+issn = {2045-2322},
+journal = {Scientific Reports},
+number = {January},
+pages = {1--12},
+title = {{Investigating the origins of eastern Polynesians using genome-wide data from the Leeward Society Isles}},
+url = {https://www.nature.com/articles/s41598-018-20026-8.pdf},
+volume = {8},
+year = {2018}
+}
+@article{Duggan2014a,
+abstract = {Archaeology, linguistics, and existing genetic studies indicate that Oceania was settled by two major waves of migration. The first migration took place approximately 40 thousand years ago and these migrants, Papuans, colonized much of Near Oceania. Approximately 3.5 thousand years ago, a second expansion of Austronesian-speakers arrived in Near Oceania and the descendants of these people spread to the far corners of the Pacific, colonizing Remote Oceania. To assess the female contribution of these two human expansions to modern populations and to investigate the potential impact of other migrations, we obtained 1,331 whole mitochondrial genome sequences from 34 populations spanning both Near and Remote Oceania. Our results quantify the magnitude of the Austronesian expansion and demonstrate the homogenizing effect of this expansion on almost all studied populations. With regards to Papuan influence, autochthonous haplogroups support the hypothesis of a long history in Near Oceania, with some lineages suggesting a time depth of 60 thousand years, and offer insight into historical interpopulation dynamics. Santa Cruz, a population located in Remote Oceania, is an anomaly with extreme frequencies of autochthonous haplogroups of Near Oceanian origin; simulations to investigate whether this might reflect a pre-Austronesian versus Austronesian settlement of the island failed to provide unequivocal support for either scenario. {\textcopyright} 2014 The American Society of Human Genetics.},
+author = {Duggan, Ana T. and Evans, Bethwyn and Friedlaender, Fran{\c{c}}oise R. and Friedlaender, Jonathan S. and Koki, George and Merriwether, D. Andrew and Kayser, Manfred and Stoneking, Mark},
+doi = {10.1016/j.ajhg.2014.03.014},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0002929714001165-main.pdf:pdf},
+isbn = {0002-9297},
+issn = {15376605},
+journal = {American Journal of Human Genetics},
+number = {5},
+pages = {721--733},
+pmid = {24726474},
+title = {{Maternal history of oceania from complete mtDNA genomes: Contrasting ancient diversity with recent homogenization due to the Austronesian expansion}},
+volume = {94},
+year = {2014}
+}
+
+@article{Kayser2010,
+abstract = {The human history of Oceania is unique in the way that it encompasses both the first out-of-Africa expansion of modern humans to New Guinea and Australia as well as the last regional human occupation of Polynesia. Other anthropological peculiarities of Oceania include features like the extraordinarily rich linguistic diversity especially of New Guinea with about 1,000 often very distinct languages, the independent and early development of agriculture in the highlands of New Guinea about 10,000 years ago, or the long-term isolation of the entire region from the outside world, which lasted as long as until the 1930s for most of the interior of New Guinea. This review will provide an overview on the genetic aspects of human population history of Oceania and how some of the anthropological peculiarities are reflected in human genetic data. Due to current data availability it will mostly focus on insights from sex-specifically inherited mitochondrial DNA and Y-chromosomal DNA, whereas more genome-wide autosomal DNA data are soon expected to add additional details or may correct views obtained from these two, albeit highly complex, genetic loci.},
+author = {Kayser, Manfred},
+doi = {10.1016/j.cub.2009.12.004},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kayser - 2010 - The human genetic history of Oceania near and remote views of dispersal.pdf:pdf},
+issn = {1879-0445},
+journal = {Current biology : CB},
+keywords = {Chromosomes, Human, Y,Chromosomes, Human, Y: genetics,DNA, Mitochondrial,DNA, Mitochondrial: genetics,Demography,Emigration and Immigration,Female,Genetics, Population,Haplotypes,Haplotypes: genetics,History, Ancient,Humans,Linguistics,Male,Oceania,Oceanic Ancestry Group,Oceanic Ancestry Group: genetics,Oceanic Ancestry Group: history},
+month = {feb},
+number = {4},
+pages = {R194--201},
+pmid = {20178767},
+publisher = {Elsevier Ltd},
+title = {{The human genetic history of Oceania: near and remote views of dispersal.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/20178767},
+volume = {20},
+year = {2010}
+}
+
+@article{Hudjashov2017,
+abstract = {{\textcopyright} 2017 The Author . Indonesia, an island nation as large as continental Europe, hosts a sizeable proportion of global human diversity, yet remains surprisingly undercharacterized genetically. Here, we substantially expand on existing studies by reporting genome-scale data for nearly 500 individuals from 25 populations in Island Southeast Asia, New Guinea, and Oceania, notably including previously unsampled islands across the Indonesian archipelago. We use high-resolution analyses of haplotype diversity to reveal fine detail of regional admixture patterns, with a particular focus on the Holocene. We find that recent population history within Indonesia is complex, and that populations from the Philippines made important genetic contributions in the early phases of the Austronesian expansion. Different, but interrelated processes, acted in the east and west. The Austronesian migration took several centuries to spread across the eastern part of the archipelago, where genetic admixture postdates the archeological signal. As with the Neolithic expansion further east in Oceania and in Europe, genetic mixing with local inhabitants in eastern Indonesia lagged behind the arrival of farming populations. In contrast, western Indonesia has a more complicated admixture history shaped by interactions with mainland Asian and Austronesian newcomers, which for some populations occurred more than once. Another layer of complexity in the west was introduced by genetic contact with South Asia and strong demographic events in isolated local groups.},
+author = {Hudjashov, Georgi and Karafet, Tatiana M. and Lawson, Daniel J. and Downey, Sean and Savina, Olga and Sudoyo, Herawati and Lansing, J. Stephen and Hammer, Michael F. and Cox, Murray P.},
+doi = {10.1093/molbev/msx196},
+file = {:home/murraycadzow/Dropbox/Papers/msx196.pdf:pdf},
+issn = {15371719},
+journal = {Molecular Biology and Evolution},
+keywords = {genetic admixture,genetic diversity,human migration,population structure},
+number = {10},
+pages = {2439--2452},
+pmid = {28957506},
+title = {{Complex Patterns of Admixture across the Indonesian Archipelago}},
+volume = {34},
+year = {2017}
+}
+
+@article{Sankar2006,
+abstract = {PURPOSE Concern over stigma as a consequence of genetic testing has grown in response to the recent increase in genetic research and testing resulting from the Human Genome Project. However, whether a genetic or hereditary basis necessarily confers a stigma to a condition remains unexamined. METHODS We performed a qualitative interview study with 86 individuals with one of four conditions: deafness or hearing loss, breast cancer, sickle cell disease, and cystic fibrosis. The first two groups were divided approximately between people who ascribed their conditions to a genetic or hereditary cause and those who did not. RESULTS Respondents interpreted genetic or hereditary causes and nongenetic causes in a variety of ways. Subjects with breast cancer reported the most consistently negative interpretation of genetic cause. This response concerned future ill health, not an enduring sense of stigma. Deaf and hard of hearing subjects provided the most consistently positive comments about a genetic or hereditary basis to their condition, casting familial hearing loss as a vital component of group and individual identity. Respondents with sickle cell disease and cystic fibrosis offered similar and positive interpretations of the genetic cause of their condition insofar as it meant their conditions were not contagious. CONCLUSIONS Although some subjects report feeling stigmatized as a result of their condition, this stigmatization is not uniformly associated with the condition's cause, genetic or otherwise. Instead, stigma emerges from a variety of sources in the context of the lived experience of a particular condition.},
+author = {Sankar, Pamela and Cho, Mildred K. and Wolpe, Paul Root and Schairer, Cynthia},
+doi = {10.1097/01.gim.0000195894.67756.8b},
+file = {:home/murraycadzow/Dropbox/Papers/nihms37946.pdf:pdf},
+isbn = {0012581720},
+issn = {10983600},
+journal = {Genetics in Medicine},
+keywords = {Disease cause,Felt stigma,Genetic conditions,Genetic testing},
+number = {1},
+pages = {33--42},
+pmid = {16418597},
+title = {{What is in a cause? Exploring the relationship between genetic cause and felt stigma}},
+volume = {8},
+year = {2006}
+}
+
+@article{Gravel2011,
+abstract = {High-throughput sequencing technology enables population-level surveys of human genomic variation. Here, we examine the joint allele frequency distributions across continental human populations and present an approach for combining complementary aspects of whole-genome, low-coverage data and targeted high-coverage data. We apply this approach to data generated by the pilot phase of the Thousand Genomes Project, including whole-genome 2-4x coverage data for 179 samples from HapMap European, Asian, and African panels as well as high-coverage target sequencing of the exons of 800 genes from 697 individuals in seven populations. We use the site frequency spectra obtained from these data to infer demographic parameters for an Out-of-Africa model for populations of African, European, and Asian descent and to predict, by a jackknife-based approach, the amount of genetic diversity that will be discovered as sample sizes are increased. We predict that the number of discovered nonsynonymous coding variants will reach 100,000 in each population after [{\~{}}]1,000 sequenced chromosomes per population, whereas [{\~{}}]2,500 chromosomes will be needed for the same number of synonymous variants. Beyond this point, the number of segregating sites in the European and Asian panel populations is expected to overcome that of the African panel because of faster recent population growth. Overall, we find that the majority of human genomic variable sites are rare and exhibit little sharing among diverged populations. Our results emphasize that replication of disease association for specific rare genetic variants across diverged populations must overcome both reduced statistical power because of rarity and higher population divergence.},
+author = {Gravel, S. and Henn, B. M. and Gutenkunst, R. N. and Indap, A. R. and Marth, G. T. and Clark, A. G. and Yu, F. and Gibbs, R. A. and Bustamante, C. D. and Altshuler, D. L. and Durbin, R. M. and Abecasis, G. R. and Bentley, D. R. and Chakravarti, A. and Clark, A. G. and Collins, F. S. and {De La Vega}, F. M. and Donnelly, P. and Egholm, M. and Flicek, P. and Gabriel, S. B. and Gibbs, R. A. and Knoppers, B. M. and Lander, E. S. and Lehrach, H. and Mardis, E. R. and McVean, G. A. and Nickerson, D. A. and Peltonen, L. and Schafer, A. J. and Sherry, S. T. and Wang, J. and Wilson, R. K. and Gibbs, R. A. and Deiros, D. and Metzker, M. and Muzny, D. and Reid, J. and Wheeler, D. and Wang, J. and Li, J. and Jian, M. and Li, G. and Li, R. and Liang, H. and Tian, G. and Wang, B. and Wang, J. and Wang, W. and Yang, H. and Zhang, X. and Zheng, H. and Lander, E. S. and Altshuler, D. L. and Ambrogio, L. and Bloom, T. and Cibulskis, K. and Fennell, T. J. and Gabriel, S. B. and Jaffe, D. B. and Shefler, E. and Sougnez, C. L. and Bentley, D. R. and Gormley, N. and Humphray, S. and Kingsbury, Z. and Koko-Gonzales, P. and Stone, J. and McKernan, K. J. and Costa, G. L. and Ichikawa, J. K. and Lee, C. C. and Sudbrak, R. and Lehrach, H. and Borodina, T. A. and Dahl, A. and Davydov, A. N. and Marquardt, P. and Mertes, F. and Nietfeld, W. and Rosenstiel, P. and Schreiber, S. and Soldatov, A. V. and Timmermann, B. and Tolzmann, M. and Egholm, M. and Affourtit, J. and Ashworth, D. and Attiya, S. and Bachorski, M. and Buglione, E. and Burke, A. and Caprio, A. and Celone, C. and Clark, S. and Conners, D. and Desany, B. and Gu, L. and Guccione, L. and Kao, K. and Kebbel, A. and Knowlton, J. and Labrecque, M. and McDade, L. and Mealmaker, C. and Minderman, M. and Nawrocki, A. and Niazi, F. and Pareja, K. and Ramenani, R. and Riches, D. and Song, W. and Turcotte, C. and Wang, S. and Mardis, E. R. and Wilson, R. K. and Dooling, D. and Fulton, L. and Fulton, R. and Weinstock, G. and Durbin, R. M. and Burton, J. and Carter, D. M. and Churcher, C. and Coffey, A. and Cox, A. and Palotie, A. and Quail, M. and Skelly, T. and Stalker, J. and Swerdlow, H. P. and Turner, D. and {De Witte}, A. and Giles, S. and Gibbs, R. A. and Wheeler, D. and Bainbridge, M. and Challis, D. and Sabo, A. and Yu, F. and Yu, J. and Wang, J. and Fang, X. and Guo, X. and Li, R. and Li, Y. and Luo, R. and Tai, S. and Wu, H. and Zheng, H. and Zheng, X. and Zhou, Y. and Li, G. and Wang, J. and Yang, H. and Marth, G. T. and Garrison, E. P. and Huang, W. and Indap, A. and Kural, D. and Lee, W.-P. and Leong, W. F. and Quinlan, A. R. and Stewart, C. and Stromberg, M. P. and Ward, A. N. and Wu, J. and Lee, C. and Mills, R. E. and Shi, X. and Daly, M. J. and DePristo, M. A. and Altshuler, D. L. and Ball, A. D. and Banks, E. and Bloom, T. and Browning, B. L. and Cibulskis, K. and Fennell, T. J. and Garimella, K. V. and Grossman, S. R. and Handsaker, R. E. and Hanna, M. and Hartl, C. and Jaffe, D. B. and Kernytsky, A. M. and Korn, J. M. and Li, H. and Maguire, J. R. and McCarroll, S. A. and McKenna, A. and Nemesh, J. C. and Philippakis, A. A. and Poplin, R. E. and Price, A. and Rivas, M. A. and Sabeti, P. C. and Schaffner, S. F. and Shefler, E. and Shlyakhter, I. A. and Cooper, D. N. and Ball, E. V. and Mort, M. and Phillips, A. D. and Stenson, P. D. and Sebat, J. and Makarov, V. and Ye, K. and Yoon, S. C. and Bustamante, C. D. and Clark, A. G. and Boyko, A. and Degenhardt, J. and Gravel, S. and Gutenkunst, R. N. and Kaganovich, M. and Keinan, A. and Lacroute, P. and Ma, X. and Reynolds, A. and Clarke, L. and Flicek, P. and Cunningham, F. and Herrero, J. and Keenen, S. and Kulesha, E. and Leinonen, R. and McLaren, W. M. and Radhakrishnan, R. and Smith, R. E. and Zalunin, V. and Zheng-Bradley, X. and Korbel, J. O. and Stutz, A. M. and Humphray, S. and Bauer, M. and Cheetham, R. K. and Cox, T. and Eberle, M. and James, T. and Kahn, S. and Murray, L. and Chakravarti, A. and Ye, K. and {De La Vega}, F. M. and Fu, Y. and Hyland, F. C. L. and Manning, J. M. and McLaughlin, S. F. and Peckham, H. E. and Sakarya, O. and Sun, Y. A. and Tsung, E. F. and Batzer, M. A. and Konkel, M. K. and Walker, J. A. and Sudbrak, R. and Albrecht, M. W. and Amstislavskiy, V. S. and Herwig, R. and Parkhomchuk, D. V. and Sherry, S. T. and Agarwala, R. and Khouri, H. M. and Morgulis, A. O. and Paschall, J. E. and Phan, L. D. and Rotmistrovsky, K. E. and Sanders, R. D. and Shumway, M. F. and Xiao, C. and McVean, G. A. and Auton, A. and Iqbal, Z. and Lunter, G. and Marchini, J. L. and Moutsianas, L. and Myers, S. and Tumian, A. and Desany, B. and Knight, J. and Winer, R. and Craig, D. W. and Beckstrom-Sternberg, S. M. and Christoforides, A. and Kurdoglu, A. A. and Pearson, J. V. and Sinari, S. A. and Tembe, W. D. and Haussler, D. and Hinrichs, A. S. and Katzman, S. J. and Kern, A. and Kuhn, R. M. and Przeworski, M. and Hernandez, R. D. and Howie, B. and Kelley, J. L. and Melton, S. C. and Abecasis, G. R. and Li, Y. and Anderson, P. and Blackwell, T. and Chen, W. and Cookson, W. O. and Ding, J. and Kang, H. M. and Lathrop, M. and Liang, L. and Moffatt, M. F. and Scheet, P. and Sidore, C. and Snyder, M. and Zhan, X. and Zollner, S. and Awadalla, P. and Casals, F. and Idaghdour, Y. and Keebler, J. and Stone, E. A. and Zilversmit, M. and Jorde, L. and Xing, J. and Eichler, E. E. and Aksay, G. and Alkan, C. and Hajirasouliha, I. and Hormozdiari, F. and Kidd, J. M. and Sahinalp, S. C. and Sudmant, P. H. and Mardis, E. R. and Chen, K. and Chinwalla, A. and Ding, L. and Koboldt, D. C. and McLellan, M. D. and Dooling, D. and Weinstock, G. and Wallis, J. W. and Wendl, M. C. and Zhang, Q. and Durbin, R. M. and Albers, C. A. and Ayub, Q. and Balasubramaniam, S. and Barrett, J. C. and Carter, D. M. and Chen, Y. and Conrad, D. F. and Danecek, P. and Dermitzakis, E. T. and Hu, M. and Huang, N. and Hurles, M. E. and Jin, H. and Jostins, L. and Keane, T. M. and Le, S. Q. and Lindsay, S. and Long, Q. and MacArthur, D. G. and Montgomery, S. B. and Parts, L. and Stalker, J. and Tyler-Smith, C. and Walter, K. and Zhang, Y. and Gerstein, M. B. and Snyder, M. and Abyzov, A. and Balasubramanian, S. and Bjornson, R. and Du, J. and Grubert, F. and Habegger, L. and Haraksingh, R. and Jee, J. and Khurana, E. and Lam, H. Y. K. and Leng, J. and Mu, X. J. and Urban, A. E. and Zhang, Z. and Li, Y. and Luo, R. and Marth, G. T. and Garrison, E. P. and Kural, D. and Quinlan, A. R. and Stewart, C. and Stromberg, M. P. and Ward, A. N. and Wu, J. and Lee, C. and Mills, R. E. and Shi, X. and McCarroll, S. A. and Banks, E. and DePristo, M. A. and Handsaker, R. E. and Hartl, C. and Korn, J. M. and Li, H. and Nemesh, J. C. and Sebat, J. and Makarov, V. and Ye, K. and Yoon, S. C. and Degenhardt, J. and Kaganovich, M. and Clarke, L. and Smith, R. E. and Zheng-Bradley, X. and Korbel, J. O. and Humphray, S. and Cheetham, R. K. and Eberle, M. and Kahn, S. and Murray, L. and Ye, K. and {De La Vega}, F. M. and Fu, Y. and Peckham, H. E. and Sun, Y. A. and Batzer, M. A. and Konkel, M. K. and Walker, J. A. and Xiao, C. and Iqbal, Z. and Desany, B. and Blackwell, T. and Snyder, M. and Xing, J. and Eichler, E. E. and Aksay, G. and Alkan, C. and Hajirasouliha, I. and Hormozdiari, F. and Kidd, J. M. and Chen, K. and Chinwalla, A. and Ding, L. and McLellan, M. D. and Wallis, J. W. and Hurles, M. E. and Conrad, D. F. and Walter, K. and Zhang, Y. and Gerstein, M. B. and Snyder, M. and Abyzov, A. and Du, J. and Grubert, F. and Haraksingh, R. and Jee, J. and Khurana, E. and Lam, H. Y. K. and Leng, J. and Mu, X. J. and Urban, A. E. and Zhang, Z. and Gibbs, R. A. and Bainbridge, M. and Challis, D. and Coafra, C. and Dinh, H. and Kovar, C. and Lee, S. and Muzny, D. and Nazareth, L. and Reid, J. and Sabo, A. and Yu, F. and Yu, J. and Marth, G. T. and Garrison, E. P. and Indap, A. and Leong, W. F. and Quinlan, A. R. and Stewart, C. and Ward, A. N. and Wu, J. and Cibulskis, K. and Fennell, T. J. and Gabriel, S. B. and Garimella, K. V. and Hartl, C. and Shefler, E. and Sougnez, C. L. and Wilkinson, J. and Clark, A. G. and Gravel, S. and Grubert, F. and Clarke, L. and Flicek, P. and Smith, R. E. and Zheng-Bradley, X. and Sherry, S. T. and Khouri, H. M. and Paschall, J. E. and Shumway, M. F. and Xiao, C. and McVean, G. A. and Katzman, S. J. and Abecasis, G. R. and Blackwell, T. and Mardis, E. R. and Dooling, D. and Fulton, L. and Fulton, R. and Koboldt, D. C. and Durbin, R. M. and Balasubramaniam, S. and Coffey, A. and Keane, T. M. and MacArthur, D. G. and Palotie, A. and Scott, C. and Stalker, J. and Tyler-Smith, C. and Gerstein, M. B. and Balasubramanian, S. and Chakravarti, A. and Knoppers, B. M. and Abecasis, G. R. and Bustamante, C. D. and Gharani, N. and Gibbs, R. A. and Jorde, L. and Kaye, J. S. and Kent, A. and Li, T. and McGuire, A. L. and McVean, G. A. and Ossorio, P. N. and Rotimi, C. N. and Su, Y. and Toji, L. H. and TylerSmith, C. and Brooks, L. D. and Felsenfeld, A. L. and McEwen, J. E. and Abdallah, A. and Juenger, C. R. and Clemm, N. C. and Collins, F. S. and Duncanson, A. and Green, E. D. and Guyer, M. S. and Peterson, J. L. and Schafer, A. J. and Abecasis, G. R. and Altshuler, D. L. and Auton, A. and Brooks, L. D. and Durbin, R. M. and Gibbs, R. A. and Hurles, M. E. and McVean, G. A.},
+doi = {10.1073/pnas.1019276108},
+file = {:home/murraycadzow/Dropbox/Papers/11983.full.pdf:pdf},
+isbn = {1091-6490 (Electronic)$\backslash$r0027-8424 (Linking)},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+number = {29},
+pages = {11983--11988},
+pmid = {21730125},
+title = {{Demographic history and rare allele sharing among human populations}},
+url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1019276108},
+volume = {108},
+year = {2011}
 }
